Product Landing Page Final

--- a/Bravo_portfoliotemplate/Product Landing Page/index.html
+++ b/Bravo_portfoliotemplate/Product Landing Page/index.html
@@ -24,9 +24,9 @@
 
         <nav id="nav-bar">
           <ul>
-            <li><a class="nav-link" href="#features">Introduction</a></li>
-            <li><a class="nav-link" href="#how-it-works">Music Video</a></li>
-            <li><a class="nav-link" href="#pricing">Achievements</a></li>
+            <li><a class="nav-link" href="#hero">Introduction</a></li>
+            <li><a class="nav-link" href="#features">About</a></li>
+            <li><a class="nav-link" href="#pricing">Pricing</a></li>
           </ul>
         </nav>
       </header>
@@ -35,103 +35,70 @@
 
       <section id="hero">
         <br>
-        <h2>Welcome to NeoCity</h2>
+        <h2>Welcome to Baguio City</h2>
         <form id="form" action="https://www.freecodecamp.com/email-submit">
           <input
-            name="email"
-            id="email"
-            type="email"
-            placeholder="Enter your email address"
+            name="name"
+            id="name"
+            type="text"
+            placeholder="Enter your Name"
             required
           />
-          <input id="submit" type="submit" value="Let's Kaja" class="btn" />
+          <input id="submit" type="submit" value="Umali Kayo" class="btn" />
         </form>
       </section>
 
       <div class="container">
         <section id="features">
           <div class="grid">
-            <div class="icon"><img src="127.jpg.png"alt="" width="100"></i></div>
+            <div class="icon"><i class="fa fa-3x fa-fire"></i></div>
             <div class="desc">
-              <h2>NCT 127</h2>
-              <p>
-                NCT 127 is the first fixed and second overall sub-unit of the South Korean boy band NCT, formed and managed by SM Entertainment. The current lineup consists of nine active members: Taeil, Johnny, 
+              <h2>High Quality Products</h2>
+              <p> The combination of skilled craftsmanship, quality materials, cultural heritage, attention to detail, and community pride distinguishes Baguio's products as high quality and sets them apart in the market.
               </p>
             </div>
           </div>
           <div class="grid">
-            <div class="icon"><img src="dream.jpg.png" alt="" width="100"></i></div>
+            <div class="icon"><i class="fa fa-3x fa-cloud"></i></div>
             <div class="desc">
-              <h2>NCT Dream</h2>
+              <h2>Chilly Weather</h2>
               <p>
-                NCT DREAM is NCT's sub-group comprising seven members – MARK, RENJUN, JENO, HAECHAN, JAEMIN, CHENLE and JISUNG. The once “teenage team” now grew up as one of the iconic K-POP boy bands.
+                Baguio City, often referred to as the "Summer Capital of the Philippines," is known for its cool and refreshing climate throughout the year.  
               </p>
             </div>
           </div>
           <div class="grid">
-            <div class="icon"><img src="wayv.png" alt="" width="100"></i>
-            </div>
+            <div class="icon"><i class="fa fa-3x fa-map"></i></div>
             <div class="desc">
-              <h2>Wayv</h2>
-              <p>
-                WayV is a six-member boy group formed by SM Entertainment, and the fourth and the Chinese sub-unit of NCT. Originally as seven, they debuted in China on January 17, 2019 with their first digital EP, The Vision.
-              </p>
-            </div>
-          </div>
-          <div class="grid">
-            <div class="icon"><img src="wish,jpg.png" alt="" width="100"></i>
-            </div>
-            <div class="desc">
-              <h2>NCT Wish</h2>
-              <p>
-                NCT Wish is a Japanese boy band and the final sub-unit of the South Korean boy band NCT, formed and managed by SM Entertainment and Avex Trax with SM director and soloist BoA, in charge as the producer.
+              <h2>Tourist Spot</h2>
+              <p>Baguio City is abundant with captivating tourist destinations, offering a blend of natural beauty and cultural heritage 
               </p>
             </div>
           </div>
         </section>
         <section id="how-it-works">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/0IpbvXVbBYA?si=Mcm9j_fNlm4r7PdT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <video width="100%" controls>
+            <source class="Baguio" src="Baguio.mp4" type="video/ogg">
+        </video>
         </section>
         <section id="pricing">
-          <div class="product" id="tenor">
-            <div class="level">2021</div>
-            <h2 class="achievements">Achievements</h2>
-            <ol>
-              <li><b>🏆Circle Chart Music Awards🏆</b></li>
-              <li>Top Kit-Seller of the Year</li>
-               <li>World K-Pop Star</li>
-              <li><b>🏆Golden Disc Awards🏆</b></li>
-              <li>Album Bonsang – “NCT 2020 Resonance Pt.1”</li>
-             
-            </ol>
-            <button class="btn">Select</button>
+          <div class="product" id="peanut_brittle">
+            <div class="level">Peanut Brittle</div>
+            <h2 class="pricing">P150</h2>
+            <img class="image" src="brittle.jpg.jpg" alt="" width="150" height="105">
+            <button class="btn">Buy Now</button>
           </div>
-          <div class="product" id="bass">
-            <div class="level">2022</div>
-            <h2>Achievements</h2>
-            <ol>
-              <li>
-                <b>🏆Golden Disc Awards🏆</b>
-              </li>
-              <li>Album Bonsang – “Sticker”</li>
-              <li><b>🏆Hanteo Music Awards🏆</b></li>
-              <li>Artist of the Year (Bonsang)</li>
-              <li><b>🏆Seoul Music Awards🏆</b></li>
-              <li>Grand Award (Daesang)</li>
-            </ol>
-            <button class="btn">Select</button>
+          <div class="product" id="strawberry_jam">
+            <div class="level">Strawberry Jam</div>
+            <h2 class="pricing">P200</h2>
+           <img class="image" src="strawberry.jpg" alt="" width="150" height="105">
+            <button class="btn">Buy Now</button>
           </div>
-          <div class="product" id="valve">
-            <div class="level">2023</div>
-            <h2>Achievements</h2>
-            <ol>
-              <li><b>🏆Circle Chart Music Awards🏆</b></li>
-              <li>Album of the Year; 1st Quarter – “Universe”</li>
-              <li>Best Kit (Album of the Year)</li>
-              <li><b>🏆Golden Disc Awards🏆</b></li>
-              <li>Album Bonsang – “Universe”</li>
-            </ol>
-            <button class="btn" style="color: darkgreen;">Select</button>
+          <div class="product" id="lengua_de_gato">
+            <div class="level">Lengua de Gato</div>
+            <h2 class="pricing">P180</h2>
+            <img class="image" src="lengua.jpg" alt="" width="130" height="105">
+            <button class="btn">Buy Now</button>
           </div>
         </section>
         <footer>
@@ -140,7 +107,7 @@
             <li><a href="#">Terms</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
-          <span>Copyright, SM Entertainment</span>
+          <span>Copyright, Jharawell Bravo</span>
         </footer>
       </div>
     </div>
