--- a/Bravo_portfoliotemplate/WEB PUBLISHED FINAL.html
+++ b/Bravo_portfoliotemplate/WEB PUBLISHED FINAL.html
@@ -7,7 +7,7 @@
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>TITULO</title>
+	<title>PORTFOLIO</title>
 	<meta name="description" content="">  
 	<meta name="author" content="">
 
@@ -75,10 +75,10 @@
    			<div class="col-twelve">
 
 	   			<h5>Hi, Hello, Annyeong</h5>
-	   			<h1>I'm Jharawell Rus S. Bravo.</h1>
+	   			<h1>I am Jharawell Rus S. Bravo.</h1>
 
 	   			<p class="intro-position">
-	   				<span>Student</span> 
+	   				<span>Student</span> <span>Front-End Developer</span>
 	   			</p>
 
 	   			<a class="button stroke smoothscroll" href="#about" title="">More About Me</a>
@@ -305,14 +305,13 @@
 
    			<!-- portfolio-wrapper -->
 	         <div id="folio-wrapper" class="block-1-2 block-mob-full stack">
-
 	         	<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<a class ="portfolio-title" href="css2.html">CSS</a>
+	               	<a class ="portfolio-title" href="https://www.figma.com/proto/4XP596rLppoYL1ZTblTVPg/SSC-High-Fidelity-Prototype?node-id=246-484&starting-point-node-id=359%3A626&mode=design&t=6CkPDadjYbGomyfY-1">SCC</a>
 	                  <a href="#modal-01" class="overlay">	                  	           
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-		     					       <h3 class="folio-title">CSS</h3>	     					    
+		     					       <h3 class="folio-title">SCC</h3>	     					    
 		     					    	 <span class="folio-types">
 		     					       	  Graphic Design
 		     					       </span>
@@ -378,19 +377,19 @@
 	            <div id="modal-01" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="duck.jpg" alt="">
+				     		<img src="SCC.jpg.png" alt="">
 				     	</div>      	
 
 					   <div class="description-box">
 					      <h4>CSS</h4>		      
-						  <p> This is my project for basic styling using CSS.</p>
-					      <div class="categories">Basic CSS
+						  <p> My first high-fidelity Project using Figma</p>
+					      <div class="categories">SCC
 							
 						  </div>		               
 					   </div>
 
 			         <div class="link-box">
-			            <a href="css2.html">Details</a>
+			            <a href="https://www.figma.com/proto/4XP596rLppoYL1ZTblTVPg/SSC-High-Fidelity-Prototype?node-id=246-484&starting-point-node-id=359%3A626&mode=design&t=6CkPDadjYbGomyfY-1">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
