--- a/Bravo_portfoliotemplate/Product Landing Page/index.html
+++ b/Bravo_portfoliotemplate/Product Landing Page/index.html
@@ -17,7 +17,7 @@
         <div class="logo">
           <img
             id="header-img"
-            src=nct_logo.jpg
+            src=breathe_baguio.png
             alt="original trombones logo"
           />
         </div>
